# distributed-sqlite-host

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  docker-entrypoint.sh  start-docker.sh  start.sh
api/: deps.py  main.py  models.py  pyproject.toml  s3_sts.py  storage.py
api/routers/: admin.py  auth.py  byo_bucket.py  databases.py
infra/cfn/: byo-bucket-role.yaml
scripts/: bootstrap-localstack-byo.sh  bootstrap-localstack-sts.sh  e2e_ds_tenant.py  smoke-byo-bucket.sh  smoke-e2e-local.sh  upload-cfn-template.sh
sdk/: pyproject.toml
sdk/db_host_client/: __init__.py  client.py  models.py
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/: state-bucket.tf
terraform/modules/apprunner/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/ssm-secrets/: main.tf  outputs.tf  variables.tf
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/dashboard/: page.tsx
web/components/: auth-form.tsx  brand-mark.tsx  create-db-dialog.tsx  db-card.tsx  env-preview-dialog.tsx
web/hooks/: use-auth.ts
web/lib/: api.ts
