[project]
name = "db-host-client"
version = "0.2.0"
description = "db-host client: exchange API key for STS-scoped S3 creds and open distributed_sqlite"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "distributed-sqlite>=0.3.0",
    "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db_host_client"]
